invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_89.src
.IPPcode24
GETCHAR int@49 int@49 int@49